AW-3980 Fix for bottom spacing

--- a/sites/all/themes/custom/parliamentwatch/scss/_deputy.scss
+++ b/sites/all/themes/custom/parliamentwatch/scss/_deputy.scss
@@ -416,8 +416,12 @@
       padding-bottom: ($space-large * 2);
     }
     @include breakpoint($breakpoint-m-min) {
-      margin-bottom: -$space-large * 2;
+      margin-bottom: -$space-large;
     }
+    @include breakpoint($breakpoint-l-min) {
+      margin-bottom: -($space-large * 2);
+    }
+
     h2, h2 a { color: $darkGray; font-family: $font-sans-serif; }
   }
   .question-content {
